updated swagger docs for payment route
