# openApi.yaml
@@ -773,8 +773,6 @@ paths:
                             "status": "Complete"
                         }
                     }
-        "400":
-          description: Missing Address Error
         "401":
           description: Authorization Error
         "500":
@@ -920,6 +918,22 @@ paths:
           description: Internal Server Error
       tags:
         - Orders
+  /api/v1/payment/create-payment-intent:
+    post:
+      summary: Create Stripe Payment Intent
+      description: Create a Stripe payment intent to send the client secret to the client.
+      operationId: payment
+      responses:
+        "201":
+          description: Successfully created and sent the Client Secret
+        "400":
+          description: Missing Address Error
+        "401":
+          description: Authorization Error
+        "500":
+          description: Internal Server Error
+      tags:
+        - Payment
 components:
   schemas:
     Register:
